# anndata_updater

./: .buildinfo  .gitignore  LICENSE  anndata_updater.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: anndata_updater.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: build_docs.yaml
_sources/: anndata_updater.rst.txt  index.rst.txt  modules.rst.txt
docs/source/: conf.py
src/anndata_updater/: __init__.py  __main__.py
