[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "anndata_updater"
authors = [
    {name = "Paul Hoffman", email = "hoff0792@umn.edu"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed"
]
requires-python = ">=3.5, <4"
dependencies = [
    "anndata",
    "scipy"
]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-bootstrap-theme",
    "sphinxcontrib-napoleon",
]

[project.urls]
Documentation = "https://mojaveazure.github.io"
Source = "https://github.com/mojaveazure/anndata_updater"
Tracker = "https://github.com/mojaveazure/anndata_updater/issues"

[tool.flit.sdist]
include = ["docs/"]
exclude = ["docs/build/"]
